fill the table, add styles for rate

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,25 +1,13 @@
-$theme-colors: (
-  "success": #00C551,
-  "danger": #FD0031
-);
-
-@import "~bootstrap/scss/bootstrap";
-
 body {
   height: 100vh;
 }
 
-.content {
-  overflow: auto;
-}
 .h1 {
-  font-size: $font-size-base * 2;
-  margin-bottom: 1.5rem;
+  font-size: 2rem;
 }
 
 .header {
   .nav-link {
-    color: #6c757d;
     padding-top: 0;
     padding-bottom: 0;
     &.active,
@@ -36,28 +24,31 @@ body {
 }
 
 .table {
-  thead th {
+  .thead-light th {
     border: 0;
     text-transform: uppercase;
   }
   tr td {
     border-top: 0;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 1px solid $gray-300;
   }
   .desc i {
     font-size: 2.4rem;
+  }
+  .nav i{
+    font-size: 1.2rem;
+  }
+  i {
+    color: $gray-500;
   }
 }
 
 .histogram {
   width: 110px;
   height: 40px;
-  margin-right: 1rem;
   background-color: darkgray;
 }
 
-.footer {
-  .nav-link {
-    color: #6c757d
-  }
+.nav-link {
+  color: $gray-500;
 }
